--- a/VanillaJS-projects/ImageSliderWControl/style.css
+++ b/VanillaJS-projects/ImageSliderWControl/style.css
@@ -1,10 +1,23 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #left, #right{
     padding: 10px;
     background-color: grey;
     width: 25px;
-    margin: 10px;
+    margin-top: 10px;
     color: white;
     text-align: center;
     user-select: none;
     cursor: pointer;
+}
+
+#btns{
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    
 }
